# hemodynamic4Foam

./: Allwmake  README.md
applications4HD/: Allwmake  CMakeLists.txt
applications4HD/solvers4HD/: CMakeLists.txt
applications4HD/solvers4HD/hemodynamic4HD/: CEqn.H  CMakeLists.txt  HEqn.H  WKBCFvPatchScalarField.C  WKFunctions.C  createFields.H  hemodynamic4HD.C
applications4HD/solvers4HD/porousHemodynamic4HD/: CMakeLists.txt  TEqn.H  UEqn.H  createFields.H  createWindkessel.H  hematocritProperties.H  porousHemodynamic4HD.C
applications4HD/utilities4HD/: CMakeLists.txt
applications4HD/utilities4HD/postProcessing4HD/: CMakeLists.txt
porousHemodynamic4HD/internalCarotidArtery/: Allrun
porousHemodynamic4HD/internalCarotidArtery/constant/: porousZones
porousHemodynamic4HD/internalCarotidArtery/system/: controlDict
porousHemodynamic4HD/middleCerebralArtery/0/: T  p
porousHemodynamic4HD/thrombosis/: Allrun  inf  thrombosis.stl
src4HD/: Allwmake  CMakeLists.txt
src4HD/foam4HD/: CMakeLists.txt
src4HD/postProcessing4HD/: Allwmake  CMakeLists.txt
src4HD/transportModels4HD/: Allwmake  CMakeLists.txt
src4HD/transportModels4HD/incompressible4HD/: CMakeLists.txt
src4HD/transportModels4HD/incompressible4HD/Make/: files
src4HD/transportModels4HD/incompressible4HD/viscosityModels4HD/Ameenuddin/: Ameenuddin.C  Ameenuddin.H
src4HD/transportModels4HD/incompressible4HD/viscosityModels4HD/Casson/: Casson.C  Casson.H
src4HD/transportModels4HD/incompressible4HD/viscosityModels4HD/Eckmann/: Eckmann.C  Eckmann.H
src4HD/transportModels4HD/incompressible4HD/viscosityModels4HD/Krieger5/: Krieger5.C  Krieger5.H
src4HD/transportModels4HD/incompressible4HD/viscosityModels4HD/KriegerDougherty/: KriegerDougherty.C  KriegerDougherty.H
src4HD/transportModels4HD/incompressible4HD/viscosityModels4HD/Quemada/: Quemada.C  Quemada.H
src4HD/transportModels4HD/incompressible4HD/viscosityModels4HD/WalburnSchneck/: WalburnSchneck.C  WalburnSchneck.H
src4HD/transportModels4HD/incompressible4HD/viscosityModels4HD/Yeleswarapu/: Yeleswarapu.C  Yeleswarapu.H
tutorials4HD/: transportProperties
tutorials4HD/ConverterBinaryToASCII/: binary.stl
(+140 files in other folders)
